# BeerSoft

./: AnalyzeKegCooler.xlsx  CMakeLists.txt  Toolchain-gcc-chip-arm.cmake  Toolchain-gcc-linaro-arm.cmake  Toolchain-gcc-x86_64.cmake  cmakeLinux.sh  cmakeWin32.bat  make_tx.sh  notes.txt
BrewerController/: CMakeLists.txt  calib.csv  cmakeLinux.sh  cmakeLinuxChip.sh  cmakeLinuxPi.sh  cmakeWin32-Vs2013.bat  cmakeWin32-Vs2015.bat
BrewerController/Scripts/: BrewerEmbeddedServer  brewcontrol.py  calib.csv  env_var.sh  go.sh  init_adc.sh  init_gpio.sh  main.py  main.sh  max31865.py  producerconsumer.py  rc.local  read_adc.sh  temp_sensor.py  temp_sensor.sh  test_env_var.sh  websocketserver.py
BrewerController/WebSite/: index.html  webmanifest.json
BrewerController/WebSite/css/: brewer.css
FermentationController/: DB9 pinout.xlsx
FermentationController/FermCtrl/: accumulator.py  create_socket.py  ctrl.py  data_collection.py  data_collector.py  go.sh  mcast_ports.txt  producerconsumer.py  rx.py  server.py  temp_control.py  temp_sensor.py  temp_spy.py  thermocouple.py  websocketserver.py
FermentationController/WebSite/: chart.js  index.html  webmanifest.json
FermentationController/WebSite/css/: fermctrl.css
FermentationMonitor/: CMakeLists.txt  DB9 pinout.xlsx  EnableSpiOnChip.txt  cmakeLinux.sh  cmakeLinuxChip.sh  cmakeWin32-Vs2013.bat  cmakeWin32-Vs2015.bat
FermentationMonitor/src/: Ads1115.h  main.cpp
InterIntegratedCircuit/: CMakeLists.txt
InterIntegratedCircuit/src/: DllSwitch.h  I2CDevice.cpp  smbus.cpp  smbus.h
KegaratorMonitor/: CMakeLists.txt
KegaratorMonitor/EmbeddedServer/src/TcpServer/: TcpServer.h
KegaratorMonitor/InterIntegratedCircuit/src/: I2CDevice.h
KegaratorMonitor/Scripts/: go.sh
KegaratorMonitor/src/: ActiveObject.h  Bmp180.h  ConnectionHandler.h  FlowMeterSensing.cpp  InterruptTasksRegistrar.h  KegaratorInterruptTasks.h  KegaratorMetrics.h  KegaratorSamplingTasks.h  Operations.h  PressureAndTemperatureSampling.cpp  SamplingTasksRegistrar.h  main.cpp
KegeratorMonitor/: CMakeLists.txt  cmakeLinux.sh  cmakeWin32-Vs2015.bat  cmakeWin32.bat  kegerator.db  readme.md  readme.txt
KegeratorMonitor/Misc/: .xinitrc
KegeratorMonitor/Scripts/: EnableI2c0.py  MonitorOnOffControl.py  MonitorOnOffControl.sh  auto_restart.sh  bck.sh  clear_cache.sh  data_collection.py  delayed_display.sh  display-kiosk.sh  display.sh  dummy_pulse_counter.py  go.sh  load_cell.py  monitor_onoff_control.py  pulse_counter.py  pulse_counter_0.sh  pulse_counter_1.sh  rc.local  server.py  server.sh  server_py.sh  setup_init.sh  temp_sensor.py  websocketserver.py
KegeratorMonitor/WebSite/: full.html  index.html  index.html.orig  test_neon.html  webmanifest.json
KegeratorMonitor/WebSite/css/: kegerator.css  neon_style.css
Projects/BrewerEmbeddedServer/: CMakeLists.txt
Projects/BrewerEmbeddedServer/src/: ActiveObject.h  Ads1115.h  BrewControl.h  BrewControlSamplingTasks.h  ConnectionHandler.h  HeaterControl.h  PeriodicTimer.h  PumpControl.h  Subject.h  TemperatureSampling.cpp  ThreadPool.h  main.cpp
Projects/FermenationEmbeddedServer/: CMakeLists.txt
Projects/FermentationDataProcessor/: CMakeLists.txt
Projects/FermentationDataProcessor/src/: main.cpp
Projects/FermentationEmbeddedServer/: CMakeLists.txt
Projects/FermentationEmbeddedServer/src/: Ads1115.h  CalibratedSensor.h  Max6675.h  Mcp3424.h  PeriodicTimer.h  main.cpp
Projects/InterIntegratedCircuit/src/: DllSwitch.h  I2CDevice.cpp  I2CDevice.h  smbus.cpp  smbus.h
Projects/KegeratorEmbeddedServer/: CMakeLists.txt
Projects/KegeratorEmbeddedServer/WebSite/: index.html
Projects/KegeratorEmbeddedServer/src/: ActiveObject.h  Ads1115.h  Bmp180.h  Co2MassSampling.cpp  ConnectionHandler.h  FilteredValue.h  FlowMeterSensing.cpp  InterruptTasksRegistrar.h  KegeratorInterruptTasks.h  KegeratorMetrics.cpp  KegeratorMetrics.h  KegeratorSamplingTasks.h  MovingAveragedValue.h  Operations.h  PressureAndTemperatureSampling.cpp  SamplingTasksRegistrar.h  Statement.cpp  Statement.h  Subject.h  main.cpp
Projects/KegeratorEmbeddedServer/src/TcpServer/: WebSocketConnection.h
Projects/Mcp3424Sensor/: CMakeLists.txt
Projects/Mcp3424Sensor/src/: TemperatureSampling.cpp  TemperatureSampling.h  main.cpp
Projects/SetupGpio/: CMakeLists.txt
Projects/SetupGpio/src/: main.cpp
include/: I2CDevice
